--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -5,9 +5,19 @@
             <h6>Check all the crypto currency lastest update</h6>
         </div>
         <div class="sub-header">
-            <marquee behavior="scroll" onmouseover="stop()" loop="infinite"  direction="left">
+            <marquee behavior="scroll" onmouseover="stop()" onmouseout="start()" loop="infinite"  direction="left">
              <div class="row">
-
+                <ng-container *ngFor="let row of bannerData">
+                    <div class="col-1">
+                        <div class="card">
+                            <img [src]="row.image" width="100" class="img-fluid" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">{{row.symbol| uppercase}} <span class="text-danger">{{row.market_cap_change_percentage_24h}} %</span></h5>
+                                <p class="card-text">{{row.current_price| currency:"THB "}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </ng-container>
              </div>
             </marquee>
         </div>
@@ -15,6 +25,48 @@
 
 </div>
 
-<div class="container mi-3">
-    <!-- table -->
+<div class="container ">
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      </mat-form-field>
+      
+      <div class="mat-elevation-z8">
+        <table mat-table matSort>
+      
+          <!-- ID Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+          </ng-container>
+      
+          <!-- Progress Column -->
+          <ng-container matColumnDef="progress">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+            <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+          </ng-container>
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+          </ng-container>
+      
+          <!-- Fruit Column -->
+          <ng-container matColumnDef="fruit">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
+            <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
 </div>
