--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -27,3 +27,27 @@
     height: 400px;
     width: 100%;
 }
+.sub-header{
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+.card{
+    border: 0;
+    background: transparent;
+    color: #fff;
+    padding: 10px;
+    width: 100px;
+    height: 200px;
+    img{
+        width: 70px;
+        margin: 0 auto;
+
+    }
+    h5{
+        font-weight: 500;
+    }
+    p{
+        font-weight: 700;
+    }
+}
