--- a/src/app/coin-list/coin-list.component.scss
+++ b/src/app/coin-list/coin-list.component.scss
@@ -4,7 +4,7 @@
     text-align: center;
     flex-direction: column;
     justify-content: center;
-    color: #fff;
+    color: #454044;
     h2{
         font-weight: bold;
         margin-bottom: 15px;
@@ -62,4 +62,18 @@ table {
   
   td, th {
     width: 25%;
+  }
+  :host ::ng-deep .mat-soft-header-content{
+    color: #fff;
+  }
+  :host ::ng-deep .mat-paginator-outer-container{
+    background-color: rgb(36, 37, 37);
+
+  }
+  :host ::ng-deep tr.mat-header-row{
+    background-color: #009688;
+
+  }
+  :host ::ng-deep tr.mat-row{
+    height: 70px;
   }
