update graph checker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
   <mat-form-field>
     <mat-select (valueChange)="sendCurrency" class="test-sm" [(ngModel)]="selectedCurrency">
-      <mat-option selected value="INR">INR</mat-option>
+      <mat-option selected value="THB">THB</mat-option>
       <mat-option selected value="USA">USA</mat-option>
     </mat-select>
   </mat-form-field>
