--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -46,7 +46,7 @@
           <!-- Progress Column -->
           <ng-container matColumnDef="current_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let row"> {{row.current_price | currency:"THB "}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.current_price | currency: currency}} </td>
           </ng-container>
       
           <!-- Name Column -->
@@ -58,7 +58,7 @@
           <!-- Fruit Column -->
           <ng-container matColumnDef="market_cap">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Market Cap </th>
-            <td mat-cell *matCellDef="let row"> {{row.market_cap | currency: "THB "}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.market_cap | currency: currency}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
