--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ $ang-crypto-checker-theme: mat.define-dark-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto;background: #212121, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import "./node_modules/bootstrap/scss/bootstrap";
