--- a/src/app/coin-list/coin-list.component.html
+++ b/src/app/coin-list/coin-list.component.html
@@ -8,7 +8,7 @@
             <marquee behavior="scroll" onmouseover="stop()" onmouseout="start()" loop="infinite"  direction="left">
              <div class="row">
                 <ng-container *ngFor="let row of bannerData">
-                    <div class="col-1">
+                    <div class="col-1" style="width: 150px;">
                         <div class="card">
                             <img [src]="row.image" width="100" class="img-fluid" alt="">
                             <div class="card-body">
@@ -52,7 +52,7 @@
           <!-- Name Column -->
           <ng-container matColumnDef="price_change_percentage_24h">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> 24h Change </th>
-            <td mat-cell *matCellDef="let row"> {{row.price_change_percentage_24h}} % </td>
+            <td mat-cell *matCellDef="let row" > {{row.price_change_percentage_24h}} % </td>
           </ng-container>
       
           <!-- Fruit Column -->
